# Gameboyish

./: .gitignore  Cargo.toml  README.md  opcodes_nopre.json  opcodes_pre.json
log/: log_file.txt
src/: bus.rs  cartridge.rs  cpu.rs  emulator.rs  io_handler.rs  lib.rs  mem.rs  ppu.rs  quartz.rs  register.rs  screen.rs  timer.rs  timer_reg.rs  util.rs  windows.rs
src/mem/: vram.rs
src/util/: cartridge_util.rs  display_impl.rs  error_type.rs  extract_opcode.rs  math_util.rs  opcode_dict_util.rs  tiles_util.rs  u8_traits.rs
src/windows/: game_window.rs
