[package]
name = "game_boyish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
raqote = "0.8.3"
minifb = "0.25.0"
font-kit = "0.11.0"
evdev = "0.12.1"
xkbcommon = { version = "0.6", features = ["x11"] }
